Tue Jan 27 16:41:45 2004  Tim Janik  <timj@gtk.org>

	* bsetrack.c (bse_track_class_init): increased default number of voices
	to 16 (from 8).

Tue Jan 27 16:03:01 2004  Tim Janik  <timj@gtk.org>

	* bsecxxbase.h: added instance_is_a(), value_get_gobject<>()
	and value_set_gobject().

	* bseexports.h:
	* bsecxxplugin.h: adapted to sficxx.h changes, don't call
	record/sequence functions from static constructor as the
	type system may not yet be initialized.

	* bsecxxutils.h: tweak InvalidArgument() exception.

	* bsesniffer.cc: implement combined requests.

	* bsetype.c: fixed transform function registration.

Mon Jan 26 02:36:07 2004  Tim Janik  <timj@gtk.org>

	* bsecxxmodule.idl: new idl file to define Bse::Effect.

	* bsecxxbase.idl: new idl file to define Bse::CxxBase.

	* bseeffectbalance.[hc]:
	* bseeffectfinetune.[hc]:
	* bseeffectnotevolume.[hc]:
	* bseeffectpatternbreak.[hc]:
	* bseeffectpatternjump.[hc]:
	* bseeffectvolumedelta.[hc]:
	* bseeffect.[hc]: remove all bseeffect* files, all the code within
	was outdated and unused for several years.

	* bse.idl: added bsecxxbase.idl and bsecxxmodule.idl.

	* bsecxxbase.[hc]*: make gobject() const. implement value_get_object(),
	value_set_object() and value_set_casted().

	* bsecxxvalue.h: removed g_value_get_object<>() template.

	* bsecxxmodule.[hc]: provide conventional BSE_TYPE_EFFECT and base class.

	* bsesniffer.idl: removed parentation hacks by including
	bsecxxmodule.idl, added Sniffer (object) field in record.

Sun Jan 25 08:36:28 2004  Tim Janik  <timj@gtk.org>

	* bsesniffer.idl: enable record and sequence generation, still
	need to comment out object references though.

Sun Jan 25 05:28:23 2004  Tim Janik  <timj@gtk.org>

	* bseplugin.c: use new boxed registration functions.

	* bsetype.[hc]: GType doesn't really support dynamic boxed types, so
	register boxed types from plugins statically and plug their
	implementations internally. tidied up pspec constructors.
